syntax = "proto3";

package vink.kubevm.io.apis.management.resource.v1alpha1;

import "types/resource.proto";
import "types/list_options.proto";
import "types/namespace_name.proto";

option go_package = "github.com/kubevm.io/vink/apis/management/resource/v1alpha1";

service ResourceListWatchManagement {
    rpc ListWatch(ListWatchRequest) returns (stream ListWatchResponse);
}

message ListWatchRequest {
    vink.kubevm.io.apis.types.ResourceType resource_type = 1;
    vink.kubevm.io.apis.types.ListOptions options = 2;
}

message ListWatchResponse {
    EventType event_type = 1;
    repeated string items = 2;
    vink.kubevm.io.apis.types.NamespaceName deleted = 3;
    vink.kubevm.io.apis.types.ListOptions options = 4;
}

enum EventType {
    ADDED = 0;
    MODIFIED = 1;
    DELETED = 2;
}
