syntax = "proto3";

package vink.kubevm.io.apis.management.resource.v1alpha1;

import "google/protobuf/empty.proto";
import "types/resource.proto";
import "types/namespace_name.proto";

option go_package = "github.com/kubevm.io/vink/apis/management/resource/v1alpha1";

service ResourceManagement {
    rpc Get(GetRequest) returns (Resource);
    rpc Create(CreateRequest) returns (Resource);
    rpc Update(UpdateRequest) returns (Resource);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message Resource {
    string data = 1;
}

message GetRequest {
    vink.kubevm.io.apis.types.ResourceType resource_type = 1;
    vink.kubevm.io.apis.types.NamespaceName namespace_name = 2;
}

message CreateRequest {
    vink.kubevm.io.apis.types.ResourceType resource_type = 1;
    string data = 2;
}

message UpdateRequest {
    vink.kubevm.io.apis.types.ResourceType resource_type = 1;
    string data = 2;
}

message DeleteRequest {
    vink.kubevm.io.apis.types.ResourceType resource_type = 1;
    vink.kubevm.io.apis.types.NamespaceName namespace_name = 2;
}
